src/test/ui/issues/issue-12997-1.stderr
error: functions used as benches must have signature `fn(&mut Bencher) -> impl Termination`
  --> $DIR/issue-12997-1.rs:6:1
   |
LL | fn foo() { }
   | ^^^^^^^^^^^^

error: functions used as benches must have signature `fn(&mut Bencher) -> impl Termination`
  --> $DIR/issue-12997-1.rs:9:1
   |
LL | fn bar(x: isize, y: isize) { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

